<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".winnershare">

    <Button
        android:id="@+id/dialBtn"
        android:layout_width="152dp"
        android:layout_height="71dp"
        android:backgroundTint="#F8E4195E"
        android:fontFamily="sans-serif-light"
        android:text="@string/call"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.54" />

    <Button
        android:id="@+id/txtBtn"
        android:layout_width="176dp"
        android:layout_height="70dp"

        android:backgroundTint="#F8E4195E"
        android:fontFamily="sans-serif-light"
        android:text="@string/message"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.249" />

    <Button
        android:id="@+id/locBtn"
        android:layout_width="153dp"
        android:layout_height="125dp"

        android:backgroundTint="#F8E4195E"
        android:fontFamily="sans-serif-light"
        android:text="@string/nearest_baseball_stadium"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.933" />

</androidx.constraintlayout.widget.ConstraintLayout>