<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Score_Counter"

    android:background="@drawable/playball"
    >
    <ImageView
        android:id="@+id/rSoxImg"
        android:layout_width="180dp"
        android:layout_height="156dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="31dp"
        app:layout_constraintBottom_toTopOf="@+id/rSoxTv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.452"
        app:srcCompat="@drawable/boston_logo"
        android:contentDescription="@string/baseball" />

    <ImageView
        android:id="@+id/nyImg"
        android:layout_width="180dp"
        android:layout_height="156dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="31dp"
        app:layout_constraintBottom_toTopOf="@+id/nyTv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.452"
        app:srcCompat="@drawable/yankees_logo"
        android:contentDescription="@string/baseball"
        />

    <TextView
        android:id="@+id/rSoxTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/_0"
        android:textColor="@color/white"
        android:textSize="80sp"
        app:layout_constraintBottom_toBottomOf="@+id/nyTv"
        app:layout_constraintEnd_toEndOf="@+id/rSoxImg"
        app:layout_constraintHorizontal_bias="0.532"
        app:layout_constraintStart_toStartOf="@+id/rSoxImg"
        app:layout_constraintTop_toBottomOf="@+id/nyImg"
        app:layout_constraintVertical_bias="1.0"
        />

    <Button
        android:id="@+id/rSOxBtn"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/holo_green_light"
        android:text="@string/go"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/rSoxTv"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="@+id/rSoxTv"
        app:layout_constraintTop_toBottomOf="@+id/rSoxTv" />

    <TextView
        android:id="@+id/nyTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="336dp"
        android:text="@string/_0"
        android:textColor="@color/white"
        android:textSize="80sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/nyImg"
        app:layout_constraintStart_toStartOf="@+id/nyImg"
        app:layout_constraintTop_toBottomOf="@+id/nyImg" />

    <Button
        android:id="@+id/nyBtn"
        android:layout_width="80sp"
        android:layout_height="80sp"
        android:layout_marginTop="20dp"
        android:background="@android:color/holo_green_light"
        android:text="@string/go"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/nyTv"
        app:layout_constraintStart_toStartOf="@+id/nyTv"
        app:layout_constraintTop_toBottomOf="@+id/nyTv" />

</androidx.constraintlayout.widget.ConstraintLayout>